# xeli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  stats.yml
examples/: departments.csv  employees.csv  employees.json
scripts/: xeli-stats.sh
src/: app.rs  event.rs  main.rs
src/ai/: client.rs  config.rs  prompt.rs
src/data/: engine.rs  export.rs  loader.rs  mod.rs
src/handlers/: command.rs  input.rs  mod.rs
src/ui/: ai_bar.rs  command_palette.rs  file_picker.rs  filter_bar.rs  header.rs  mod.rs  status.rs  table.rs  theme.rs
src/utils/: format.rs
tapes/: README.md  ai.tape  features.tape  hero.tape  stills.tape
tests/: data_test.rs
