[package]
name = "xeli"
version = "0.1.2"
edition = "2021"
description = "Excel for the Terminal — interactive TUI spreadsheet with AI-powered queries"
license = "MIT"
repository = "https://github.com/josharsh/xeli"
homepage = "https://github.com/josharsh/xeli"
readme = "README.md"
keywords = ["cli", "tui", "spreadsheet", "csv", "duckdb"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Data Engine
duckdb = { version = "1.4", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# AI
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
anyhow = "1"
dirs = "6"
toml = "0.8"
unicode-width = "0.2"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
